# fastapi_shop_backend

./: .env  .gitignore  Dockerfile  alembic.ini  command_guide.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
migrations/: env.py
migrations/versions/: 2024_05_12_1217-aab70b5ef73f_init_postgres_rev.py
src/: __init__.py  base_dao.py  config.py  database.py  main.py
src/catalog/: __init__.py  dao.py  models.py  router.py  schemas.py  service.py
src/users/: dao.py  dependencies.py  models.py  router.py  service.py  utils.py
tests/: test_catalog_router.py
